docs: :memo: add documentation for list openings
